# app/UserPrivacySettings.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App;
+
+use Illuminate\Database\Eloquent\Model;
+
+class UserPrivacySettings extends Model
+{
+    protected $table = "user_privacy_settings";
+}
