# public/docs/api-docs.json
@@ -92,7 +92,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/User"
             }
@@ -123,7 +123,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/UserResponse"
             }
@@ -155,7 +155,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/UserResponse"
             }
@@ -186,7 +186,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/UserCoordinates"
             }
@@ -217,7 +217,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Success"
           }
         }
       }
@@ -245,7 +245,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Success"
           }
         }
       }
@@ -273,9 +273,40 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Events"
+            }
+          }
+        }
+      }
+    },
+    "/user/userPrivacySettings": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Kullanıcının katıldığı etkinlikler",
+        "operationId": "userPrivacySettings",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "type": "string",
+            "schema": {
+              "$ref": "#/definitions/UserPrivacySettings"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/UserPrivacySettings"
             }
           }
         }
@@ -293,7 +324,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Success"
           }
         }
       }
@@ -321,7 +352,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Success"
           }
         }
       }
@@ -349,7 +380,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Success"
           }
         }
       }
@@ -378,7 +409,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Events"
             }
@@ -413,7 +444,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Events"
             }
@@ -444,7 +475,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Events"
             }
@@ -510,7 +541,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Events"
             }
@@ -542,7 +573,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Comments"
             }
@@ -606,7 +637,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Message"
             }
@@ -638,7 +669,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Success",
             "schema": {
               "$ref": "#/definitions/Message"
             }
@@ -1269,6 +1300,26 @@
       "properties": {
         "from_user_id": {
           "type": "integer"
+        }
+      },
+      "xml": {
+        "name": "User"
+      }
+    },
+    "UserPrivacySettings": {
+      "type": "object",
+      "properties": {
+        "user_id": {
+          "type": "integer"
+        },
+        "visibility_on_the_map": {
+          "type": "boolean"
+        },
+        "no_message": {
+          "type": "boolean"
+        },
+        "no_follow_up_request": {
+          "type": "boolean"
         }
       },
       "xml": {
