# routes/api.php
@@ -21,6 +21,7 @@ Route::post('user/login', 'Api\UserController@login');
 Route::post('user/register', 'Api\UserController@register');
 Route::post('user/attendedActivity', 'Api\UserController@userAttendedActivity');
 Route::post('user/attendedActivities', 'Api\UserController@userAttendedActivities');
+Route::post('user/userPrivacySettings', 'Api\UserController@userPrivacySettings');
 Route::post('user/coordinate/setCoordinates', 'Api\UserCoordinateController@setCoordinates');
 Route::post('user/coordinate/nearbyUsers', 'Api\UserCoordinateController@nearbyUsers');
 Route::post('user/followers', 'Api\UserFollowController@followers');
